--- a/SchoolTV_FE_Source/package.json
+++ b/SchoolTV_FE_Source/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
     "aos": "^2.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1",
+    "react-router-dom": "^7.1.3",
+    "styled-components": "^6.1.14",
     "swiper": "^11.2.1",
     "tailwindcss": "^3.4.17"
   },
