--- a/SchoolTV_FE_Source/package.json
+++ b/SchoolTV_FE_Source/package.json
@@ -15,11 +15,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
     "aos": "^2.3.4",
+    "framer-motion": "^12.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "styled-components": "^6.1.14",
-    "swiper": "^11.2.1",
+    "swiper": "^11.2.2",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
