--- a/SchoolTV_FE_Source/package.json
+++ b/SchoolTV_FE_Source/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "react-youtube": "^10.1.0",
     "styled-components": "^6.1.14",
     "swiper": "^11.2.2",
     "tailwindcss": "^3.4.17"
