--- a/SchoolTV_FE_Source/package.json
+++ b/SchoolTV_FE_Source/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
     "antd": "^5.23.1",
+    "antd-style": "^3.7.1",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.1",
