--- a/SchoolTV_FE_Source/package.json
+++ b/SchoolTV_FE_Source/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^7.1.5",
     "react-youtube": "^10.1.0",
     "styled-components": "^6.1.15",
+    "swiper": "^10.0.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
