--- a/SchoolTV_FE_Source/package.json
+++ b/SchoolTV_FE_Source/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.475.0",
     "mdast-util-to-string": "^4.0.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-markdown": "^10.1.0",
